--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.19.0",
     "sequelize-typescript": "^2.1.3",
+    "sqlite": "^4.1.1",
     "sqlite3": "^5.0.3"
   },
   "devDependencies": {
@@ -50,7 +51,6 @@
     "jest": "27.0.6",
     "prettier": "^2.3.2",
     "supertest": "^6.1.3",
-    "ts-jest": "^27.0.3",
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "^3.10.1",
